common/logs/metrics_enricher.err
Traceback (most recent call last):
  File "/data/data/com.termux/files/home/projects/Bubbles-payload/funpumper/metrics_enricher_loop.py", line 37, in <module>
    time.sleep(300)  # every 5 minutes
    ^^^^^^^^^^^^^^^
KeyboardInterrupt
Traceback (most recent call last):
  File "/data/data/com.termux/files/home/projects/Bubbles-payload/funpumper/metrics_enricher_loop.py", line 37, in <module>
    time.sleep(300)  # every 5 minutes
    ^^^^^^^^^^^^^^^
KeyboardInterrupt
Traceback (most recent call last):
  File "/data/data/com.termux/files/home/projects/Bubbles-payload/funpumper/metrics_enricher_loop.py", line 37, in <module>
    time.sleep(300)  # every 5 minutes
    ^^^^^^^^^^^^^^^
KeyboardInterrupt
Traceback (most recent call last):
  File "/data/data/com.termux/files/home/projects/Bubbles-payload/funpumper/metrics_enricher_loop.py", line 37, in <module>
    time.sleep(300)  # every 5 minutes
    ^^^^^^^^^^^^^^^
KeyboardInterrupt
Traceback (most recent call last):
  File "/data/data/com.termux/files/home/projects/Bubbles-payload/funpumper/metrics_enricher_loop.py", line 37, in <module>
    time.sleep(300)  # every 5 minutes
    ^^^^^^^^^^^^^^^
KeyboardInterrupt
  File "/root/projects/Bubbles-payload/funpumper/metrics_enricher_loop.py", line 17
    HEL﻿IUS_RATE_LIMIT       = 2    # 2 requests per second
       ^
SyntaxError: invalid non-printable character U+FEFF
  File "/root/projects/Bubbles-payload/funpumper/metrics_enricher_loop.py", line 17
    HEL﻿IUS_RATE_LIMIT       = 2    # 2 requests per second
       ^
SyntaxError: invalid non-printable character U+FEFF
